# RefactorinGL

./: .gitignore  CMakeLists.txt  run
include/: debug.hpp  defaults.hpp  renderScreen.hpp
src/: main.cpp  screen.cpp
